--- a/src/app/inventory/inventory.component.css
+++ b/src/app/inventory/inventory.component.css
@@ -7,8 +7,10 @@
 .inventory{
     width: 180px;
     display: flex;
-    justify-content: start;
     flex-wrap: wrap;
+    align-items: stretch;
+    padding: 0;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .inventory:after{
@@ -18,14 +20,13 @@
 }
 
 .item{
-    height: 90px;
-    padding-bottom: 100%;
     position: relative;
     box-shadow: inset 0px 0px 1px #555;
     background-color: #d9d9d9;
-    line-height: 90px;
     text-align: center;
-    flex: 0 0 80px;
+    flex: 0 0 90px;
+    height: 90px;
+    width: 90px;
 }
 
 .item.active{
@@ -34,7 +35,9 @@
 
 button.button-combine{
     margin-top:25px;
-    width: 160px;
+    height: 35px;
+    padding: 0;
+    width: 180px;
 }
 
 input[type='checkbox']{
@@ -52,5 +55,29 @@ input[type='checkbox']{
     border: none;
     cursor: pointer;
     padding: 0;
+    display: block;
+}
+
+.item .seeds-details{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(255,255,255,0.9);
+    padding: 15px 10px;
+    text-align: left;
+    pointer-events: none;
+    font-size: 11px;
+    margin: 0;
+    list-style: none;
+}
+
+.item .seeds-details li:before{
+    content:"> ";
+}
+
+.item:hover .seeds-details{
     display: block;
 }
